--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage":"https://vishal27-com.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -22,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
